--- a/app.css
+++ b/app.css
@@ -214,4 +214,11 @@ blockquote, q {
     float: right;
   }
 
+  .active {
+    background-color: #F06324;
+  }
+
+  .open {
+    max-height: 70vh;
+  }
 }
