--- a/app.css
+++ b/app.css
@@ -33,7 +33,6 @@ body {
   line-height: 1;
   color: black;
   background: white;
-  height: 150vh;
 }
 
 ol, ul {
@@ -68,6 +67,7 @@ blockquote, q {
   box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.2);
   z-index: 3;
   position: fixed;
+  background-color: #fff;
   top: 0;
   color: #444;
 }
@@ -186,6 +186,7 @@ blockquote, q {
     bottom: 0;
     overflow: auto;
     width: 100%;
+    background-color: #fff;
     transition: max-height .2s ease-out;
   }
 
@@ -237,4 +238,13 @@ blockquote, q {
   .no-shadow {
     box-shadow: none;
   }
+}
+
+.navbar-description {
+  line-height: 1.3em;
+  padding: 20px;
+  margin: auto;
+  margin-top: 100px;
+  width: 50vw;
+  border: 1px solid #EBEBEB;
 }
