--- a/app.css
+++ b/app.css
@@ -253,10 +253,47 @@ blockquote, q {
   }
 }
 
-
-
 /* calculator */
 .calculator {
+  max-width: 500px;
   margin: auto;
   margin-top: 100px;
+}
+
+.calculator h1 {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 36px;
+  font-weight: 300;
+  margin-bottom: 30px;
+}
+
+.calculator-form {
+  display: flex;
+}
+
+.calculator-form h2 {
+  font-size: 0.9em;
+}
+
+.calculator-form fieldset, h2, select {
+  width: 100%;
+  margin-bottom: 5px;
+}
+
+.calculator-form fieldset {
+  padding-right: 10px;
+}
+
+select {
+  background-image: url('icon_chevron.png');
+  background-repeat: no-repeat;
+  background-size: 5%;
+  background-position: 96%;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background-color: #fff;
+  border: 1px solid #eee;
+  border-radius: 2px;
+  font-size: 1em;
+  padding: 10px 30px 10px 10px;
 }
