--- a/app.css
+++ b/app.css
@@ -256,8 +256,7 @@ blockquote, q {
 /* calculator */
 .calculator {
   max-width: 500px;
-  margin: auto;
-  margin-top: 100px;
+  margin: 100px auto;
 }
 
 .calculator h1 {
@@ -296,4 +295,73 @@ select {
   border-radius: 2px;
   font-size: 1em;
   padding: 10px 30px 10px 10px;
+}
+
+.results {
+  width: 100%;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+}
+
+.results h2, h3, h4 {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 300;
+}
+
+.gray {
+  color: #818181;
+}
+
+.results > section {
+  padding: 20px;
+  width: 50%;
+}
+
+.results h2 {
+  font-size: 22px;
+  height: 60px;
+}
+
+.results-sections {
+  margin-bottom: 10px;
+}
+
+.results-sections h3 {
+  margin-bottom: 5px;
+  line-height: 1.5em;
+  font-weight: 400;
+  font-size: 0.9em;
+}
+
+.results-sections h4 {
+  font-size: 24px;
+}
+
+.brand-results {
+  margin-top: 52px;
+  text-align: right;
+}
+
+.nnn-results {
+  text-align: left;
+  border-left: 2px solid #ebebeb;
+}
+
+.utensils {
+  height: 40px;
+  margin-bottom: 10px;
+}
+
+.nnn-protein {
+  color:#f06324;
+}
+
+.nnn-fat {
+  color:#23ac9b;
+}
+
+.nnn-carb {
+  color:#e2d16e;
 }
