--- a/app.css
+++ b/app.css
@@ -297,17 +297,20 @@ select {
   padding: 10px 30px 10px 10px;
 }
 
+.results-container {
+  background: #fff;
+}
+
+.results-container * {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 300;
+}
+
 .results {
   width: 100%;
-  background: #fff;
   display: flex;
   justify-content: center;
   padding: 20px;
-}
-
-.results h2, h3, h4 {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: 300;
 }
 
 .gray {
@@ -365,3 +368,27 @@ select {
 .nnn-carb {
   color:#e2d16e;
 }
+
+.center-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px 0px;
+  width: 100%;
+}
+
+.nutrients-direction img {
+  margin: 10px 0px;
+  width: 16px;
+}
+
+.nutrients-learn {
+  color: #f06324;
+  font-weight: 400;
+}
+
+.footer-note {
+  font-size: 13px;
+  margin: 30px 0px;
+}
+
