--- a/app.css
+++ b/app.css
@@ -182,77 +182,6 @@ blockquote, q {
   border: 1px solid #EBEBEB;
 }
 
-@media (max-width: 800px) {
-  .navbar {
-    display: inline-block;
-    transition: box-shadow .2s ease-in;
-  }
-
-  .navbar-menu {
-    padding-right: 0;
-    max-height: 0;
-    display: inline-block;
-    bottom: 0;
-    overflow: auto;
-    width: 100%;
-    background-color: #fff;
-    transition: max-height .2s ease-out;
-  }
-
-  .navbar-menu > li > a {
-    padding: 0px;
-  }
-
-  .navbar-menu > li {
-    padding: 10px 20px;
-  }
-
-  .navbar-menu > li:last-of-type {
-    padding: 0px 10px;
-  }
-
-  .dropdown a {
-    width: 100%;
-  }
-
-  .dropdown-content {
-    transition: all 0.8s ease-out;
-    position: relative;
-    padding: 0px;
-    border: none;
-    border-bottom: 1px solid #eee;
-  }
-
-  #trial-button-mobile {
-    display: inline-block;
-    float: right;
-  }
-
-  .hamburger-menu {
-    display: inline-block;
-    float: right;
-  }
-
-  .active {
-    background-color: #F06324;
-    height: 3px;
-    margin: 2px 0px;
-  }
-
-  .open {
-    max-height: 70vh;
-    border-bottom: 1px solid #EBEBEB;
-  }
-
-  .no-shadow {
-    box-shadow: none;
-  }
-
-  .navbar-description {
-    width: 100%;
-  }
-}
-
 /* calculator */
 .calculator {
   max-width: 700px;
@@ -286,7 +215,7 @@ blockquote, q {
 select {
   background-image: url('icon_chevron.png');
   background-repeat: no-repeat;
-  background-size: 5%;
+  background-size: 10px;
   background-position: 96%;
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -392,3 +321,82 @@ select {
   margin: 30px 0px;
 }
 
+@media (max-width: 800px) {
+  .navbar {
+    display: inline-block;
+    transition: box-shadow .2s ease-in;
+  }
+
+  .navbar-menu {
+    padding-right: 0;
+    max-height: 0;
+    display: inline-block;
+    bottom: 0;
+    overflow: auto;
+    width: 100%;
+    background-color: #fff;
+    transition: max-height .2s ease-out;
+  }
+
+  .navbar-menu > li > a {
+    padding: 0px;
+  }
+
+  .navbar-menu > li {
+    padding: 10px 20px;
+  }
+
+  .navbar-menu > li:last-of-type {
+    padding: 0px 10px;
+  }
+
+  .dropdown a {
+    width: 100%;
+  }
+
+  .dropdown-content {
+    transition: all 0.8s ease-out;
+    position: relative;
+    padding: 0px;
+    border: none;
+    border-bottom: 1px solid #eee;
+  }
+
+  #trial-button-mobile {
+    display: inline-block;
+    float: right;
+  }
+
+  .hamburger-menu {
+    display: inline-block;
+    float: right;
+  }
+
+  .active {
+    background-color: #F06324;
+    height: 3px;
+    margin: 2px 0px;
+  }
+
+  .open {
+    max-height: 70vh;
+    border-bottom: 1px solid #EBEBEB;
+  }
+
+  .no-shadow {
+    box-shadow: none;
+  }
+
+  .navbar-description {
+    width: 100%;
+  }
+
+  .calculator {
+    margin: 100px 15px;
+  }
+
+  .calculator-form {
+    display: block;
+    width: 100%
+  }
+}
